# notify

./: .gitignore  README.rst  dev.env  h2notify.service  pyproject.toml
notify/: __init__.py  constants.py  enums.py  logging.ini  logging.py
notify/config/: __init__.py
notify/routes/: router.py
notify/routes/api_v1/: email.py  healthcheck.py  sms.py
notify/schemas/: __init__.py  healthcheck.py  notification.py  sslwireless.py
notify/services/: email.py  parser.py  sms.py
notify/tests/: test_healthcheck.py
notify/util/: metadata.py
