[tool.poetry]
name = "notify"
version = "0.1.0"
description = "Notification Service For PLIL"
authors = ["KM Jiaul Islam Jibon <jiaulislam.ict.bd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.98.0"
sqlalchemy = "^2.0.17"
orjson = "^3.9.1"
pendulum = "^2.1.2"
oracledb = "^1.3.2"
httpx = "^0.24.1"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
mypy = "^1.4.0"
devtools = "^0.11.0"


[tool.poetry.group.server.dependencies]
uvicorn = "^0.22.0"
hypercorn = "^0.14.3"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "./epay/tests"
]

[tool.isort]
known-third-party = ["fastapi", "python-dateutil", "python-dotenv", "oracledb", "num2words", "httpx", "pytz", "bcrypt"]
